bindings/fortran/dtl_algorithms.f90


        function dtl_for_each_array_const(arr, func, user_data) &
                bind(c, name='dtl_for_each_array_const')
            import :: c_ptr, c_int, c_funptr
            type(c_ptr), value :: arr
            type(c_funptr), value :: func
            type(c_ptr), value :: user_data
            integer(c_int) :: dtl_for_each_array_const
        end function

        ! ==================================================================
        ! Callback: transform
        ! ==================================================================

        function dtl_transform_vector(src, dst, func, user_data) &
                bind(c, name='dtl_transform_vector')
            import :: c_ptr, c_int, c_funptr
            type(c_ptr), value :: src
            type(c_ptr), value :: dst
            type(c_funptr), value :: func
            type(c_ptr), value :: user_data
            integer(c_int) :: dtl_transform_vector
        end function

        function dtl_transform_array(src, dst, func, user_data) &
                bind(c, name='dtl_transform_array')
            import :: c_ptr, c_int, c_funptr
            type(c_ptr), value :: src
            type(c_ptr), value :: dst
            type(c_funptr), value :: func
            type(c_ptr), value :: user_data
            integer(c_int) :: dtl_transform_array
        end function

        ! ==================================================================
        ! Callback: find-if
        ! ==================================================================

        function dtl_find_if_vector(vec, pred, user_data) &
                bind(c, name='dtl_find_if_vector')
            import :: c_ptr, c_int64_t, c_funptr
            type(c_ptr), value :: vec
            type(c_funptr), value :: pred
            type(c_ptr), value :: user_data
            integer(c_int64_t) :: dtl_find_if_vector
        end function

        function dtl_find_if_array(arr, pred, user_data) &
                bind(c, name='dtl_find_if_array')
            import :: c_ptr, c_int64_t, c_funptr
            type(c_ptr), value :: arr
            type(c_funptr), value :: pred
            type(c_ptr), value :: user_data
            integer(c_int64_t) :: dtl_find_if_array
        end function

        ! ==================================================================
        ! Callback: count-if
        ! ==================================================================

        function dtl_count_if_vector(vec, pred, user_data) &
                bind(c, name='dtl_count_if_vector')
            import :: c_ptr, c_int64_t, c_funptr
            type(c_ptr), value :: vec
            type(c_funptr), value :: pred
            type(c_ptr), value :: user_data
            integer(c_int64_t) :: dtl_count_if_vector
        end function

        function dtl_count_if_array(arr, pred, user_data) &
                bind(c, name='dtl_count_if_array')
            import :: c_ptr, c_int64_t, c_funptr
            type(c_ptr), value :: arr
            type(c_funptr), value :: pred
            type(c_ptr), value :: user_data
            integer(c_int64_t) :: dtl_count_if_array
        end function

        ! ==================================================================
        ! Callback: predicates
        ! ==================================================================

        function dtl_all_of_vector(vec, pred, user_data) &
                bind(c, name='dtl_all_of_vector')
            import :: c_ptr, c_int, c_funptr
            type(c_ptr), value :: vec
            type(c_funptr), value :: pred
            type(c_ptr), value :: user_data
            integer(c_int) :: dtl_all_of_vector
        end function

        function dtl_any_of_vector(vec, pred, user_data) &
                bind(c, name='dtl_any_of_vector')
            import :: c_ptr, c_int, c_funptr
            type(c_ptr), value :: vec
            type(c_funptr), value :: pred
            type(c_ptr), value :: user_data
            integer(c_int) :: dtl_any_of_vector
        end function

        function dtl_none_of_vector(vec, pred, user_data) &
                bind(c, name='dtl_none_of_vector')
            import :: c_ptr, c_int, c_funptr
            type(c_ptr), value :: vec
            type(c_funptr), value :: pred
            type(c_ptr), value :: user_data
            integer(c_int) :: dtl_none_of_vector
        end function

        function dtl_all_of_array(arr, pred, user_data) &
                bind(c, name='dtl_all_of_array')
            import :: c_ptr, c_int, c_funptr
            type(c_ptr), value :: arr
            type(c_funptr), value :: pred
            type(c_ptr), value :: user_data
            integer(c_int) :: dtl_all_of_array
        end function

        function dtl_any_of_array(arr, pred, user_data) &
                bind(c, name='dtl_any_of_array')
            import :: c_ptr, c_int, c_funptr
            type(c_ptr), value :: arr
            type(c_funptr), value :: pred
            type(c_ptr), value :: user_data
            integer(c_int) :: dtl_any_of_array
        end function

        function dtl_none_of_array(arr, pred, user_data) &
                bind(c, name='dtl_none_of_array')
            import :: c_ptr, c_int, c_funptr
            type(c_ptr), value :: arr
            type(c_funptr), value :: pred
            type(c_ptr), value :: user_data
            integer(c_int) :: dtl_none_of_array
        end function

        ! ==================================================================
        ! Callback: custom sort
        ! ==================================================================

        function dtl_sort_vector_func(vec, cmp, user_data) &
                bind(c, name='dtl_sort_vector_func')
            import :: c_ptr, c_int, c_funptr
            type(c_ptr), value :: vec
            type(c_funptr), value :: cmp
            type(c_ptr), value :: user_data
            integer(c_int) :: dtl_sort_vector_func
        end function

        function dtl_sort_array_func(arr, cmp, user_data) &
                bind(c, name='dtl_sort_array_func')
            import :: c_ptr, c_int, c_funptr
            type(c_ptr), value :: arr
            type(c_funptr), value :: cmp
            type(c_ptr), value :: user_data
            integer(c_int) :: dtl_sort_array_func
        end function

        ! ==================================================================
        ! Callback: custom reduce
        ! ==================================================================

        function dtl_reduce_local_vector_func(vec, func, identity, result, &
                                              user_data) &
                bind(c, name='dtl_reduce_local_vector_func')
            import :: c_ptr, c_int, c_funptr
            type(c_ptr), value :: vec
            type(c_funptr), value :: func
            type(c_ptr), value :: identity
            type(c_ptr), value :: result
            type(c_ptr), value :: user_data
            integer(c_int) :: dtl_reduce_local_vector_func
        end function

        function dtl_reduce_local_array_func(arr, func, identity, result, &
                                             user_data) &
                bind(c, name='dtl_reduce_local_array_func')
            import :: c_ptr, c_int, c_funptr
            type(c_ptr), value :: arr
            type(c_funptr), value :: func
            type(c_ptr), value :: identity
            type(c_ptr), value :: result
            type(c_ptr), value :: user_data
            integer(c_int) :: dtl_reduce_local_array_func
        end function

        ! ==================================================================
        ! Async Algorithms (Experimental)
        ! ==================================================================

        !> @warning Experimental — may hang due to progress engine issues
        function dtl_async_for_each_vector(vec, func, user_data, req) &
                bind(c, name='dtl_async_for_each_vector')
            import :: c_ptr, c_int, c_funptr
            type(c_ptr), value :: vec
            type(c_funptr), value :: func
            type(c_ptr), value :: user_data
            type(c_ptr), intent(out) :: req
            integer(c_int) :: dtl_async_for_each_vector
        end function

        !> @warning Experimental — may hang due to progress engine issues
        function dtl_async_transform_vector(src, dst, func, user_data, req) &
                bind(c, name='dtl_async_transform_vector')
            import :: c_ptr, c_int, c_funptr
            type(c_ptr), value :: src
            type(c_ptr), value :: dst
            type(c_funptr), value :: func
            type(c_ptr), value :: user_data
            type(c_ptr), intent(out) :: req
            integer(c_int) :: dtl_async_transform_vector
        end function

        !> @warning Experimental — may hang due to progress engine issues
        function dtl_async_reduce_vector(vec, op, result, req) &
                bind(c, name='dtl_async_reduce_vector')
            import :: c_ptr, c_int
            type(c_ptr), value :: vec
            integer(c_int), value :: op
            type(c_ptr), value :: result
            type(c_ptr), intent(out) :: req
            integer(c_int) :: dtl_async_reduce_vector
        end function

        !> @warning Experimental — may hang due to progress engine issues
        function dtl_async_sort_vector(vec, req) &
                bind(c, name='dtl_async_sort_vector')
            import :: c_ptr, c_int
            type(c_ptr), value :: vec
            type(c_ptr), intent(out) :: req
            integer(c_int) :: dtl_async_sort_vector
        end function

        !> @warning Experimental — may hang due to progress engine issues
        function dtl_async_for_each_array(arr, func, user_data, req) &
                bind(c, name='dtl_async_for_each_array')
            import :: c_ptr, c_int, c_funptr
            type(c_ptr), value :: arr
            type(c_funptr), value :: func
            type(c_ptr), value :: user_data
            type(c_ptr), intent(out) :: req
            integer(c_int) :: dtl_async_for_each_array
        end function

        !> @warning Experimental — may hang due to progress engine issues
        function dtl_async_reduce_array(arr, op, result, req) &
                bind(c, name='dtl_async_reduce_array')
            import :: c_ptr, c_int
            type(c_ptr), value :: arr
            integer(c_int), value :: op
            type(c_ptr), value :: result
            type(c_ptr), intent(out) :: req
            integer(c_int) :: dtl_async_reduce_array
        end function

    end interface

end module dtl_algorithms
